--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Sora:wght@100..800&display=swap" rel="stylesheet">
 </head>
 <body>
-
+  <div class="container">
+    <div class="logo">
+      <img src="assets/logo.svg" alt="">
+      <header>
+        <span class="free"></span>
+      </header>
 </body>
 </html>
