--- a/index.html
+++ b/index.html
@@ -13,8 +13,26 @@
   <div class="container">
     <div class="logo">
       <img src="assets/logo.svg" alt="">
-      <header>
-        <span class="free"></span>
-      </header>
+      <img src="assets/numbers.svg" alt="">
+    </div>
+    <header>
+      <span class="free">Online - Gratuito</span>
+      <h1>Sorteador de números</h1>
+      <div class="faq">
+        <img src="assets/icons/social.svg" alt="" class="social">
+        <div>
+          <span>Como funciona o sorteador de números?</span>
+          <p>O sorteador utiliza um algoritmo de geração aleatória para criar números dentro do intervalo especificado pelo usuário.</p>
+        </div>
+      </div>
+      <div class="faq">
+        <img src="assets/icons/social.svg" alt="" class="social">
+        <div>
+          <span>Posso escolher o intervalo dos números?</span>
+          <p>Sim, você pode definir os valores mínimo e máximo para o intervalo dos números sorteados.</p>
+        </div>
+      </div>
+    </header>
+  </div>
 </body>
 </html>
